typhon-cluster/apps/prowlarr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prowlarr
  labels:
    pod-security.kubernetes.io/enforce: restricted
