typhon-cluster/apps/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
spec:
  parentRefs:
    - name: main
      namespace: gateway
  hostnames:
    - prowlarr.buildwithcaleb.com
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
